--- a/client/package.json
+++ b/client/package.json
@@ -20,11 +20,14 @@
     "expo": "~53.0.11",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.5",
+    "expo-location": "~18.1.5",
+    "expo-network": "~7.1.5",
     "expo-router": "~5.1.0",
     "expo-secure-store": "~14.2.3",
     "expo-sensors": "~14.1.4",
@@ -38,19 +41,19 @@
     "react-native": "0.79.3",
     "react-native-device-info": "^14.0.4",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "rxjs": "^7.8.2",
-    "expo-location": "~18.1.5",
-    "expo-device": "~7.1.4",
-    "expo-network": "~7.1.5"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
