--- a/client/app.json
+++ b/client/app.json
@@ -47,7 +47,8 @@
         {
           "motionPermission": "Allow CanGuard AI to access motion sensors for behavioral authentication"
         }
-      ]
+      ],
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
