--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "axios": "^1.10.0",
     "expo": "^53.0.15",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
@@ -34,8 +35,6 @@
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.9",
-    "expo-web-browser": "~14.2.0",
     "expo-system-ui": "~5.0.9",
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
