--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,13 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@ceramicnetwork/http-client": "^6.4.0",
+    "@ceramicnetwork/stream-tile": "^6.4.0",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
+    "dids": "^5.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
@@ -22,6 +26,7 @@
     "helmet": "^8.1.0",
     "ipfs-http-client": "^53.0.1",
     "jsonwebtoken": "^9.0.2",
+    "key-did-provider-ed25519": "^4.0.2",
     "mongoose": "^8.16.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
